--- a/zee_bangla.html
+++ b/zee_bangla.html
@@ -51,7 +51,7 @@
 				<div id="header">
 					<nav id="nav2">
 						<ul>
-							<li><a href="bhojo_gobindo.html"> জি বাংলা প্রকাশ হবে ০২-০২-২-২০১৮</a></li>
+							<li><a href="bhojo_gobindo.html"> জি বাংলা প্রকাশ হবে ০২-০২-২০১৮</a></li>
 							
 						</ul>
 					</nav>
