--- a/zee_bangla.html
+++ b/zee_bangla.html
@@ -51,11 +51,30 @@
 				<div id="header">
 					<nav id="nav2">
 						<ul>
-							<li><a href="bhojo_gobindo.html"> জি বাংলা প্রকাশ হবে ০২-০২-২০১৮</a></li>
+							<li><a href="zee_bangla.html"> সকল সিরিয়াল প্রকাশ হবে ০৫-০২-২০১৮ ইং তারিখে</a></li>
 							
 						</ul>
 					</nav>
 				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+				<div id="banner" class="12u">
+					<!-- <div class="container">
+					<a href="#"><img src="images/pics01.jpg" alt=""></a></div> -->
+						<div class="video3">
+						<div class="videowith">
+										<a href="http://bengalitvserial.net/files/download/id/72688">
+												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
+												<h1>Click here for download</h1>
+												<p> Bokul Kotha | বকুল কথা | 2nd February 2018 | Full episode 53 🌾 </p>
+											</a>
+						</div>
+						
+						</div>
+					</div>
 			</div>
 		</div>
 		</br>
