--- a/zee_bangla.html
+++ b/zee_bangla.html
@@ -66,6 +66,14 @@
 					<a href="#"><img src="images/pics01.jpg" alt=""></a></div> -->
 						<div class="video3">
 						<div class="videowith">
+										<a href="https://r3---sn-c5oba5apo3-q5je.googlevideo.com/videoplayback?id=o-AJMlJSwKRHmV0ZjD9Tgx5hiKOFm-RfzHE8iNI1MK52te&keepalive=yes&sparams=aitags%2Cclen%2Cdur%2Cei%2Cgir%2Cid%2Cinitcwndbps%2Cip%2Cipbits%2Citag%2Ckeepalive%2Clmt%2Cmime%2Cmm%2Cmn%2Cms%2Cmv%2Cpl%2Crequiressl%2Csource%2Cexpire&gir=yes&mv=m&expire=1517704723&mime=video%2Fwebm&fvip=1&ei=swF2WvH6F4SMowPT2LX4BA&ms=au%2Crdu&mt=1517682992&itag=244&pl=24&mm=31%2C29&mn=sn-c5oba5apo3-q5je%2Csn-npoeen7k&aitags=133%2C134%2C135%2C160%2C242%2C243%2C244%2C278&clen=129661395&requiressl=yes&source=youtube&signature=C07C83ACC8994DC504C2A5D702FF9BF00BF0E786.B31592FBE0284E55DCC32871572EB08CF8D687ED&dur=1816.000&lmt=1517683045961826&key=yt6&ip=103.67.157.60&ipbits=0&initcwndbps=78750&ratebypass=yes&alr=yes&cpn=uSYmhqZP5DlxFP5e&c=WEB&cver=2.20180131&rn=3&rbuf=0">
+												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
+												<h1>Click here for download</h1>
+												<p> Bokul Kotha | বকুল কথা | 3 February 2018 | Full episode 54 🌾 </p>
+											</a>
+						</div>
+
+						<div class="videowith">
 										<a href="http://bengalitvserial.net/files/download/id/72688">
 												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
 												<h1>Click here for download</h1>
