--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<header id="header">
 
 							<div class="inner">
-							<a href="index.html" class="logo"><img src="images/creativeDew.gif" alt="" /></a>
+							<a href="index.html" class="logo"><img src="images/CMtv.png" alt="" /></a>
 							<nav id="nav">
 							<ul>
 								<li class="current_page_item"><a href="index.html">Star Jalsa</a></li>
@@ -29,8 +29,8 @@
 							</nav>
 							</div>
 
-						<span class="avatar"><img src="images/crackermanor.png" alt="" /></span>
-						<h1>Hello. I am <strong><a href="http://twitter.com/mijan_prof">Cracker Man</a></strong>,I am a professional graphic designer.<br />
+						<!-- <span class="avatar"><img src="images/crackermanor.png" alt="" /></span> -->
+						<h1>Hello. I am <strong><a href="http://twitter.com/mijan_prof">Cracker Man</a></strong><br />
 						</h1>
 
 						<ul class="icons">
@@ -65,7 +65,7 @@
 							<div>
 									<div class="box">
 										<a href="rakhi_bandhan.html">
-											<img src="images/rakhi_bandhan.jpg">
+											<img src="images/rakhi_bondon.jpg">
 											<p> Rakhi Bandhan</p>
 										</a>
 									</div>
