--- a/jai_kali_kalkattawali.html
+++ b/jai_kali_kalkattawali.html
@@ -10,11 +10,6 @@
 				
 	</head>
 	<body>
-	<style type="text/css">
-		.testing p{
-			font-size: 60px;
-		}
-	</style>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -26,8 +21,8 @@
 							<a href="index.html" class="logo"><img src="images/creativeDew.gif" alt="" /></a>
 							<nav id="nav">
 							<ul>
-								<li class="current_page_item"><a href="index.html">Star Jalsa</a></li>
-								<li><a href="zee_bangla.html">Zee Bangla</a></li>
+								<li><a href="index.html">Star Jalsa</a></li>
+								<li class="current_page_item"><a href="zee_bangla.html">Zee Bangla</a></li>
 								<li><a href="#">Live TV</a></li> 
 							</ul>
 								
