--- a/rakhi_bandhan.html
+++ b/rakhi_bandhan.html
@@ -21,8 +21,8 @@
 							<a href="index.html" class="logo"><img src="images/creativeDew.gif" alt="" /></a>
 							<nav id="nav">
 							<ul>
-								<li class="current_page_item"><a href="index.html">Star Jalsa</a></li>
-								<li><a href="zee_bangla.html">Zee Bangla</a></li>
+								<li><a href="index.html">Star Jalsa</a></li>
+								<li class="current_page_item"><a href="zee_bangla.html">Zee Bangla</a></li>
 								<li><a href="#">Live TV</a></li> 
 							</ul>
 								
@@ -39,7 +39,6 @@
 							<li><a href="mijan.prof@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
-
 				<!-- Main -->
 					<section id="main">
 
