--- a/rakhi_bandhan.html
+++ b/rakhi_bandhan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>CreativeDew</title>
+		<title>Cracker Man</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
@@ -18,19 +18,19 @@
 					<header id="header">
 
 							<div class="inner">
-							<a href="index.html" class="logo"><img src="images/creativeDew.gif" alt="" /></a>
+							<a href="index.html" class="logo"><img src="images/CMtv.png" alt="" /></a>
 							<nav id="nav">
 							<ul>
-								<li><a href="index.html">Star Jalsa</a></li>
-								<li class="current_page_item"><a href="zee_bangla.html">Zee Bangla</a></li>
+								<li class="current_page_item"><a href="index.html">Star Jalsa</a></li>
+								<li><a href="zee_bangla.html">Zee Bangla</a></li>
 								<li><a href="#">Live TV</a></li> 
 							</ul>
 								
 							</nav>
 							</div>
 
-						<span class="avatar"><img src="images/crackermanor.png" alt="" /></span>
-						<h1>Hello. I am <strong><a href="http://twitter.com/mijan_prof">Cracker Man</a></strong>,I am a professional graphic designer.<br />
+						<!-- <span class="avatar"><img src="images/crackermanor.png" alt="" /></span> -->
+						<h1>Hello. I am <strong><a href="http://twitter.com/mijan_prof">Cracker Man</a></strong><br />
 						</h1>
 
 						<ul class="icons">
@@ -39,6 +39,7 @@
 							<li><a href="mijan.prof@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
+
 				<!-- Main -->
 					<section id="main">
 
