--- a/ke_apon_ke_Por.html
+++ b/ke_apon_ke_Por.html
@@ -34,9 +34,9 @@
 						</h1>
 
 						<ul class="icons">
-							<li><a href="https://twitter.com/mijan_prof" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://facebook.com/mijan_prof" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="mijan.prof@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCS4xKKh6R3GAhNiUBIFmNGQ" class="icon style2 fab fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="https://web.facebook.com/Cracker-Man-572368066438308" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCS4xKKh6R3GAhNiUBIFmNGQ" class="icon style2 fab fa-youtube"><span class="label">Youtube</span></a></li>
 						</ul>
 					</header>
 
