--- a/zee_bangla.html
+++ b/zee_bangla.html
@@ -51,7 +51,7 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="bokul_kotha.html">
+											<a href="Bokul_Kotha.html">
 												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
 												<p> Bokul Kotha | বকুল কথা</p>
 												
