--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -52,10 +52,10 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="http://www.ozee.com/shows/bokul-kotha">
-												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
-												<p> Bokul Kotha | বকুল কথা | 4 February 2018 | Full episode 55 🌾 </p>
-												<h1>Click here for Watch</h1>
+											<a href="#">
+												<img src="images/cm.gif" alt="Web Templete" />
+												<p> Bokul Kotha | বকুল কথা | 5 February 2018 | Full episode 55 🌾 </p>
+												<h1>Coming Soon...</h1>
 											</a>
 
 									</div>			
