--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -53,7 +53,7 @@
 							<div>
 									<div class="box">
 											<a href="#">
-												<img src="images/cm.gif" alt="Web Templete" />
+												<img src="images/cs.gif" alt="Web Templete" />
 												<p> Bokul Kotha | বকুল কথা | 5 February 2018 | Full episode 55 🌾 </p>
 												<h1>Coming Soon...</h1>
 											</a>
