--- a/bhanumartir_khel.html
+++ b/bhanumartir_khel.html
@@ -52,10 +52,10 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="http://www.ozee.com/shows/bokul-kotha">
-												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
-												<p> Bokul Kotha | বকুল কথা | 4 February 2018 | Full episode 55 🌾 </p>
-												<h1>Click here for Watch</h1>
+											<a href="#">
+												<img src="images/cs.gif" alt="Bhanumotir Khel - Episode 28" />
+												<p> Bhanumotir Khel - Episode 28 (February 5, 2018) Full Episode</p>
+												<h1>Coming Soon...</h1>
 											</a>
 
 									</div>			
@@ -64,12 +64,11 @@
 								<!-- midle -->
 							<div>
 									<div class="box">
-											<a href="http://bengalitvserial.net/files/download/id/72789">
-												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
-												<p> Bokul Kotha | বকুল কথা | 3rd February 2018 | Full episode 54 🌾 </p>
+											<a href="http://bengalitvserial.net/files/download/id/72780">
+												<img src="images/BHANUMATIR KHEL.jpg" alt="Web Templete" />
+												<p> Bhanumotir Khel - Episode 27 (February 3, 2018) Full Episode</p>
 												<h1>Click here for download</h1>
 											</a>
-
 									</div>
 												
 							</div>
@@ -77,9 +76,9 @@
 								<!-- right -->
 							<div>
 									<div class="box">
-											<a href="http://bengalitvserial.net/files/download/id/72688">
-												<img src="images/Bokul Kotha.jpg" alt="Web Templete" />
-												<p> Bokul Kotha | বকুল কথা | 2nd February 2018 | Full episode 53 🌾 </p>
+											<a href="http://bengalitvserial.net/files/download/id/72691">
+												<img src="images/BHANUMATIR KHEL.jpg" alt="Bhanumotir Khel - Episode 26" />
+												<p> Bhanumotir Khel - Episode 26 (February 2, 2018) Full Episode</p>
 												<h1>Click here for download</h1>
 											</a>
 									</div>
