--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -52,10 +52,10 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Web Templete" />
+											<a href="http://www.ozee.com/shows/bokul-kotha">
+												<img src="images/Bokul Kotha.jpg" alt="Bokul Kotha" />
 												<p> Bokul Kotha | বকুল কথা | 5 February 2018 | Full episode 55 🌾 </p>
-												<h1>Coming Soon...</h1>
+												<h1> Click here for Watch</h1>
 											</a>
 
 									</div>			
