--- a/bhojo_gobindo.html
+++ b/bhojo_gobindo.html
@@ -53,10 +53,10 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Bhojo Gobindo" />
+											<a href="http://bengalitvserial.net/files/download/id/72926">
+												<img src="images/bhojo_gobindo.jpg" alt="Bhojo Gobindo" />
 												<p> Bhojo Gobindo (5 February 2018) Episode - 251 </p>
-												<h1>Cooming Soon ....</h1>
+												<h1>Click here for download</h1>
 											</a>
 									</div>
 												
