--- a/bhanumartir_khel.html
+++ b/bhanumartir_khel.html
@@ -52,10 +52,10 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Bhanumotir Khel - Episode 28" />
+											<a href="http://bengalitvserial.net/files/download/id/72960">
+												<img src="images/BHANUMATIR KHEL.jpg" alt="Bhanumotir Khel - Episode 28" />
 												<p> Bhanumotir Khel - Episode 28 (February 5, 2018) Full Episode</p>
-												<h1>Coming Soon...</h1>
+												<h1>Click here for download</h1>
 											</a>
 
 									</div>			
