--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -56,7 +56,13 @@
 
 								<!-- midle -->
 							<div>
-									
+									<div class="box">
+											<a href="#">
+												<img src="images/cs.gif" alt="Bokul Kotha" />
+												<p> Bokul Kotha | বকুল কথা | 6 February 2018 | Full episode 56 🌾 </p>
+												<h1>Coming Soon...</h1>
+											</a>
+									</div>
 												
 							</div>
 
