--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -57,10 +57,10 @@
 								<!-- midle -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Bokul Kotha" />
+											<a href="http://bengalitvserial.net/files/download/id/73059">
+												<img src="images/Bokul Kotha.jpg" alt="Bokul Kotha" />
 												<p> Bokul Kotha | বকুল কথা | 6 February 2018 | Full episode 56 🌾 </p>
-												<h1>Coming Soon...</h1>
+												<h1>Click here for download</h1>
 											</a>
 									</div>
 												
