--- a/joyee.html
+++ b/joyee.html
@@ -56,7 +56,13 @@
 
 								<!-- midle -->
 							<div>
-												
+									<div class="box">
+											<a href="#">
+												<img src="images/cs.gif" alt="Joyee - Episode 118" />
+												<p> Joyee - Episode 122 (February 7, 2018) Full Episode  </p>
+												<h1>Click here for download</h1>
+											</a>
+									</div>			
 							</div>
 
 								<!-- right -->
