--- a/adorini.html
+++ b/adorini.html
@@ -52,9 +52,9 @@
 								<!-- left -->
 							<div>
 									<div class="box">
-											<a href="http://bengalitvserial.net/files/download/id/73016">
+											<a href="http://bengalitvserial.net/files/download/id/73115">
 												<img src="images/adorini.jpg" alt="adorini.jpg" />
-												<p> Adorini (6th February 2018) Episode - 155 Full Episode </p>
+												<p> Adorini (7th February 2018) Episode - 156 Full Episode </p>
 												<h1>Click here for download</h1>
 											</a>
 
@@ -64,7 +64,14 @@
 
 								<!-- midle -->
 							<div>
-									
+									<div class="box">
+											<a href="http://bengalitvserial.net/files/download/id/73016">
+												<img src="images/adorini.jpg" alt="adorini.jpg" />
+												<p> Adorini (6th February 2018) Episode - 155 Full Episode </p>
+												<h1>Click here for download</h1>
+											</a>
+
+									</div>
 												
 							</div>
 
