--- a/bhojo_gobindo.html
+++ b/bhojo_gobindo.html
@@ -59,8 +59,8 @@
 								<!-- midle -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Joyee - Episode 119" />
+											<a href="http://bengalitvserial.net/files/download/id/73123">
+												<img src="images/bhojo_gobindo.jpg" alt="Joyee - Episode 119" />
 												<p> Bhojo Gobindo (7th February 2018) Episode - 254 Full Episode </p>
 												<h1>Click here for download</h1>
 											</a>
