--- a/gopal_bhar.html
+++ b/gopal_bhar.html
@@ -51,8 +51,8 @@
 								<!-- left -->
 							<div> 
 										<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Bokul Kotha" />
+											<a href="http://bengalitvserial.net/files/download/id/73111">
+												<img src="images/gopa_bhar.jpg" alt="Bokul Kotha" />
 												<p> Gopal Bhar 7 February 2018  </p>
 												<h1> Click here for download</h1>
 											</a>
