--- a/protidhan.html
+++ b/protidhan.html
@@ -56,15 +56,14 @@
 
 								<!-- midle -->
 							<div>
-									>
 												
 							</div>
 
 								<!-- right -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Pratidaan" />
+											<a href="http://bengalitvserial.net/files/download/id/73119">
+												<img src="images/Pratidaan.jpg" alt="Pratidaan" />
 												<p> Pratidaan (7th February 2018) Episode - 170 Full Episod 🌾 </p>
 												<h1>Click here for download</h1>
 											</a>
