--- a/joyee.html
+++ b/joyee.html
@@ -57,8 +57,8 @@
 								<!-- midle -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Joyee - Episode 118" />
+											<a href="http://bengalitvserial.net/files/download/id/73138">
+												<img src="images/joyee.jpg" alt="Joyee - Episode 118" />
 												<p> Joyee - Episode 122 (February 7, 2018) Full Episode  </p>
 												<h1>Click here for download</h1>
 											</a>
