--- a/rakhi_bandhan.html
+++ b/rakhi_bandhan.html
@@ -55,8 +55,8 @@
 								<!-- midle -->
 							<div>
 									<div class="box">
-											<a href="#">
-												<img src="images/cs.gif" alt="Bokul Kotha" />
+											<a href="http://bengalitvserial.net/files/download/id/73111">
+												<img src="images/rakhi_bondon.jpg" alt="Bokul Kotha" />
 												<p> Rakhi Bandhan (7th February 2018) Episode - 435 Full Episode</p>
 												<h1> Click here for download</h1>
 											</a>
