--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -50,11 +50,11 @@
 
 							<section class="thumbnails">
 								<!-- left -->
-							<div>http://bengalitvserial.net/files/download/id/73147
+							<div>
 									<div class="box">
-											<a href="http://bengalitvserial.net/files/download/id/73147">
+											<a href="http://bengalitvserial.net/files/download/id/73254">
 												<img src="images/Bokul Kotha.jpg" alt="Bokul Kotha" />
-												<p> Bokul Kotha | বকুল কথা | 7 February 2018 | Full episode 57 🌾 </p>
+												<p> Bokul Kotha | বকুল কথা | 8 February 2018 | Full episode 58 🌾 </p>
 												<h1>Click here for download</h1>
 											</a>
 									</div>			
@@ -62,7 +62,13 @@
 
 								<!-- midle -->
 							<div>
-									
+									<div class="box">
+											<a href="http://bengalitvserial.net/files/download/id/73147">
+												<img src="images/Bokul Kotha.jpg" alt="Bokul Kotha" />
+												<p> Bokul Kotha | বকুল কথা | 7 February 2018 | Full episode 57 🌾 </p>
+												<h1>Click here for download</h1>
+											</a>
+									</div>
 												
 							</div>
 
