--- a/protidhan.html
+++ b/protidhan.html
@@ -56,7 +56,14 @@
 
 								<!-- midle -->
 							<div>
-												
+										<div class="box">
+											<a href="http://bengalitvserial.net/files/download/id/73315">
+												<img src="images/Pratidaan.jpg" alt="Pratidaan" />
+												<p> Pratidaan (9th February 2018) Episode - 172 Full Episod 🌾 </p>
+												<h1>Click here for download</h1>
+											</a>
+
+									</div>		
 							</div>
 
 								<!-- right -->
