--- a/rakhi_bandhan.html
+++ b/rakhi_bandhan.html
@@ -48,8 +48,16 @@
 						<!-- ***** First Line ****	 -->
 
 							<section class="thumbnails">
-								<!-- left -->
+								<!-- left -->73499
 							<div> 
+							<div class="box">
+											<a href="http://bengalitvserial.net/files/download/id/73499">
+												<img src="images/rakhi_bondon.jpg" alt="Bokul Kotha" />
+												<p> Rakhi Bandhan (11th February 2018) Episode - 439</p>
+												<h1> Click here for download</h1>
+											</a>
+
+									</div>
 							</div>
 
 								<!-- midle -->
