--- a/protidhan.html
+++ b/protidhan.html
@@ -51,7 +51,14 @@
 							<section class="thumbnails">
 								<!-- left -->
 							<div> 
-												
+									<div class="box">
+											<a href="http://bengalitvserial.net/files/download/id/73508">
+												<img src="images/Pratidaan.jpg" alt="Pratidaan (11th February  2018) Episode - 174 (HD).mp4" />
+												<p> Pratidaan (11th February  2018) Episode - 174 🌾 </p>
+												<h1>Click here for download</h1>
+											</a>
+
+									</div>				
 							</div>
 
 								<!-- midle -->
