--- a/Bokul_Kotha.html
+++ b/Bokul_Kotha.html
@@ -58,7 +58,7 @@
 									
 								<div class="box">
 											<a href="#">
-												<img src="images/cs.gif" alt="Bokul Kotha" />
+												<img src="images/cst.gif" alt="Bokul Kotha" />
 												<p> Bokul Kotha | বকুল কথা | 12 February 2018 | Full episode 61 🌾 </p>
 												<h1>Click here for download</h1>
 											</a>
